force-app/main/default/objects/Statement__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <formula>Account__r.AccPac_Account__c</formula>
    <label>Account Number</label>
    <type>Text</type>
</CustomField>