force-app/main/default/objects/Statement__c/fields/Balance_Forward_Amount__c.field-meta.xml
<CustomField>
    <fullName>Balance_Forward_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Balance Forward Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>