force-app/main/default/objects/Statement__c/fields/Last_Balance_Forward_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Balance_Forward_Date__c</fullName>
    <label>Last Balance Forward Date</label>
    <type>Date</type>
</CustomField>