force-app/main/default/objects/Statement__c/fields/Overdue_Amount_2__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Amount_2__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Overdue - 31 to 60 Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>