force-app/main/default/objects/Statement__c/fields/Overdue_Amount_4__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Amount_4__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Overdue - Over 90 Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>