force-app/main/default/objects/Statement__c/fields/Remit_Address__c.field-meta.xml
<CustomField>
    <fullName>Remit_Address__c</fullName>
    <label>Remit Address</label>
    <type>TextArea</type>
</CustomField>