force-app/main/default/objects/Statement__c/fields/Remit_City_State_Zip__c.field-meta.xml
<CustomField>
    <fullName>Remit_City_State_Zip__c</fullName>
    <label>Remit City/State/Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>