force-app/main/default/objects/Statement__c/fields/Remit_Fax__c.field-meta.xml
<CustomField>
    <fullName>Remit_Fax__c</fullName>
    <label>Remit Fax</label>
    <type>Phone</type>
</CustomField>