force-app/main/default/objects/Statement__c/fields/Remit_Phone__c.field-meta.xml
<CustomField>
    <fullName>Remit_Phone__c</fullName>
    <label>Remit Phone</label>
    <type>Phone</type>
</CustomField>