force-app/main/default/objects/Statement__c/fields/Statement_ID__c.field-meta.xml
<CustomField>
    <fullName>Statement_ID__c</fullName>
    <externalId>true</externalId>
    <label>Statement ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>