force-app/main/default/objects/Statement__c/fields/Statement_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Statement_Sequence__c</fullName>
    <label>Statement Sequence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>