force-app/main/default/objects/Statement__c/fields/Statement_Total__c.field-meta.xml
<CustomField>
    <fullName>Statement_Total__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Balance Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>