force-app/main/default/objects/Statement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Statement_ID__c</columns>
    <columns>Account__c</columns>
    <columns>Account_Number__c</columns>
    <columns>Statement_Date__c</columns>
    <columns>Statement_Total__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>contains</operation>
        <value>PwC</value>
    </filters>
    <label>All</label>
</ListView>